--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   		<div class="video-container">
   			<video preload = "true" autoplay="autoplay" loop="loop" volume="mute">
 
-  				<source src ="assets/video/visual.MP4" type = "video/MP4">
+  				<source src ="assets/video/visual.mp4" type = "video/mp4">
   					<source src = "assets/video/visual.webm" type="video/webm">
   						<source src = "assets/video/visual/visual.ogv" type="video/ogg">
 
